--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -194,6 +194,6 @@ header {
 
 @media screen and (max-height: 480px) and (orientation: landscape) {
 	.header-title {
-		margin-top: 110px;
+		margin-top: 160px;
 	}
 }
