--- a/styles/style.css
+++ b/styles/style.css
@@ -452,7 +452,7 @@ header .container {
 }
 @media screen and (max-height: 480px) and (orientation: landscape) {
   .header-title {
-    margin-top: 110px;
+    margin-top: 160px;
   }
 }
 .about {
@@ -494,7 +494,7 @@ header .container {
   left: 0;
   height: 243px;
   width: 100%;
-  background-image: url("/portfolio/images/cloud.svg");
+  background-image: url("../images/cloud.svg");
 }
 
 .about-image {
@@ -622,6 +622,11 @@ header .container {
   }
   .about-image {
     display: none;
+  }
+}
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  .about {
+    margin-top: 403px;
   }
 }
 .skills {
